--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
     <title>Document</title>
 </head>
 <body>
     <p>Test</p>
+    <form action="https://send.pageclip.co/{yourSiteKey}/{formName}" class="pageclip-form" method="post">
+        <input type="text" name="test" id="">
+      </form>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 </html>
