--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <p>Test</p>
     <form action="https://send.pageclip.co/{yourSiteKey}/{formName}" class="pageclip-form" method="post">
         <input type="text" name="test" id="">
-      </form>
+        <button type="submit" class="pageclip-form__submit">
+            <span>Send</span>
+          </button>
+    </form>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 </html>
