--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>Test</p>
-    <form action="https://send.pageclip.co/{yourSiteKey}/{formName}" class="pageclip-form" method="post">
+    <form action="https://send.pageclip.co/rFCehl2ZXeDtEYqUXAKYa3cFR42pm36f/contact-form" class="pageclip-form" method="post">
         <input type="text" name="test" id="">
         <button type="submit" class="pageclip-form__submit">
             <span>Send</span>
