--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
     <p>Test</p>
-    <form action="https://send.pageclip.co/rFCehl2ZXeDtEYqUXAKYa3cFR42pm36f/contact-form" class="pageclip-form" method="post">
-        <input type="text" name="test" id="">
-        <button type="submit" class="pageclip-form__submit">
-            <span>Send</span>
-          </button>
-    </form>
+    <form method="post" action="https://send.pageclip.co/AD3PM09xsb2cjNM8ToTI3sR0XVXPGL1B/contact">
+        <input type="text" name="name" value="Billy Jean"/>
+        <input type="text" name="email" value="billy@example.com"/>
+        <button type="submit">Submit</button>
+      </form>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 </html>
